# traveloka-devops-test

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  locustfile.py  nginx.conf  run.sh  test_crud.sh
src/: main.rs
src/todo/: delete.rs  get.rs  init.rs  mod.rs  patch.rs  post.rs
